--- a/templates/panel/index.html
+++ b/templates/panel/index.html
@@ -34,12 +34,8 @@
     </header>
     <section id="hero" class="hero d-flex align-items-center contact">
         <div class="container">
-            <div class="row gy-4">
-                <div class="col-lg-6 hero-img col-md-6" data-aos="zoom-out" data-aos-delay="200">
-                    <img src="{% static 'assets/img/3.png' %}" class="img-fluid" alt="Admin">
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <form action="" method="post" class="php-email-form" style="padding-top: 12%;">
+            <div style="width:500px; margin-left:auto; margin-right:auto;" align="center">
+                <form action="" method="post" class="php-email-form" style="padding-top: 12%;">
                         <header class="section-header">
                             <p id="labelform">Veuillez vous connecter</p>
                         </header>
@@ -61,7 +57,6 @@
                             </div>
                         </div>
                     </form>
-                </div>
             </div>
         </div>
     </section>
