--- a/templates/panel/index.html
+++ b/templates/panel/index.html
@@ -37,6 +37,31 @@
         </nav>
         <!--SIDEBAR-->
         <div id="content">
+            <section id="counts" class="counts">
+                <div class="container" data-aos="fade-up">
+                    <h2 class="titre">Aperçu</h2>
+                    <div class="row gy-4">
+                        <div class="col-lg-3 col-md-6">
+                            <div class="count-box">
+                                <i class="bi bi-file-earmark lico" style="color: #4154f1;"></i>
+                                <div>
+                                    {% if nb_dmd %}
+                                    <span>{{nb_dmd}}</span>
+                                    {% if nb_dmd <= 1 %}
+                                      <p>Demande</p>
+                                    {% else %}
+                                      <p>Demandes</p>
+                                    {% endif %}
+                                  {% else %}
+                                    <span>--</span>
+                                    <p>Demande</p>
+                                  {% endif %}
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12"></div>
