--- a/templates/panel/index.html
+++ b/templates/panel/index.html
@@ -62,9 +62,43 @@
                     </div>
                 </div>
             </section>
+            <br>
             <div class="container-fluid">
                 <div class="row">
-                    <div class="col-lg-12"></div>
+                    <div class="col-lg-12">
+                        <div class="container-fluid table-responsive">
+                            {% if lst_dmd %}
+                            <table class="table table-striped">
+                                <thead class="thead">
+                                    <tr>
+                                        <th scope="col">#</th>
+                                        <th scope="col">Raison social</th>
+                                        <th scope="col">Téléphone P.</th>
+                                        <th scope="col">Adresse e-mail</th>
+                                        <th scope="col">Date</th>
+                                        <th scope="colg" colspan="2"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                {% for dmd in lst_dmd %}
+                                    <tr>
+                                        <th scope="row">{{forloop.counter}}</th>
+                                        <td>{{dmd.nom}}</td>
+                                        <td>{{dmd.telephone_p}}</td>
+                                        <td>{{dmd.mail}}</td>
+                                        <td>{{dmd.date_add|date:"d/m/Y"}}</td>
+                                        <td><a href="" title="Détails"><i class="bi bi-info-circle info"></i></a></td>
+                                        <td><a href="" title="Supprimer définitivement"><i class="bi bi-x-circle delete" id="btnSupVte"></i></a></td>
+                                    </tr>
+                                {% endfor %}
+                                </tbody>
+                            </table>
+                            {% else %}
+                                <br>
+                                <p class="alert alert-info text-center">Aucune demande pour le moment.</p>
+                            {% endif %}
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
