--- a/templates/organisations/index.html
+++ b/templates/organisations/index.html
@@ -4,62 +4,19 @@
 {% block title %}Organisations{% endblock title %}
 
 {% block body %}
-<section id="hero" class="hero d-flex align-items-center">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6 d-flex flex-column justify-content-center">
-                <h1 data-aos="fade-up">Inscrivez votre organisation pour commencer à utiliser Ramea</h1>
-                <div data-aos="fade-up" data-aos-delay="600">
-                    <div class="text-center text-lg-start">
-                        <a href="#register" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
-                            <span>S'inscrire</span>
-                            <i class="bi bi-arrow-right"></i>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-                <img src="{% static 'assets/img/1.png' %}" class="img-fluid" alt="">
-            </div>
-        </div>
-    </div>
-</section>
-<!-- ======= Clients Section ======= -->
-<section id="clients" class="clients">
+<section class="hero d-flex align-items-center contact" id="register">
     <div class="container" data-aos="fade-up">
         <header class="section-header">
-            <h2>Nos Clients</h2>
-            <p>Ils nous font conifance</p>
-        </header>
-        <div class="clients-slider swiper-container">
-            <div class="swiper-wrapper align-items-center">
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-1.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-2.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-3.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-4.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-5.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-6.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-6.png' %}" class="img-fluid" alt=""></div>
-                <div class="swiper-slide"><img src="{% static 'assets/img/clients/client-8.png' %}" class="img-fluid" alt=""></div>
-            </div>
-            <div class="swiper-pagination"></div>
-        </div>
-    </div>
-</section><!-- End Clients Section -->
 
-<section id="register" class="contact">
-    <div class="container" data-aos="fade-up">
-        <header class="section-header">
-            <h2>Inscription {{id}}</h2>
         </header>
         <div class="row gy-4">
             <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-                <img src="{% static 'assets/img/2.png' %}" class="img-fluid" alt="Organisations">
+                <!--<img src="{% static 'assets/img/2.png' %}" class="img-fluid" alt="Organisations">-->
             </div>
             <div class="col-lg-6">
                 <form action="" method="post" class="php-email-form" style="padding-top: 12%;">
                     <header class="section-header">
-                        <p id="labelform">Inscrivez votre organisation</p>
+                        <p id="labelform">Faites votre demande d'inscription</p>
                     </header>
                     {% csrf_token %}
                     <div class="row gy-4">
@@ -88,12 +45,15 @@
                             {% endfor %}
                         </div>
                         <div class="col-md-12 text-center">
-                            <button type="submit" class="w-100">S'inscrire</button>
+                            <button type="submit" class="w-100">Valider</button>
                         </div>
                     </div>
                 </form>
             </div>
         </div>
     </div>
-  </section><!-- End Contact Section -->
+  </section>
+
+
+<!-- End Contact Section -->
 {% endblock body %}
