Finalisation du module de demande d'inscription

--- a/templates/accueil/index.html
+++ b/templates/accueil/index.html
@@ -10,7 +10,7 @@
                 <h1 data-aos="fade-up">Nous offrons des solutions modernes pour développer votre entreprise</h1>
                 <div data-aos="fade-up" data-aos-delay="600">
                     <div class="text-center text-lg-start">
-                        <a href="{% url 'index_org' %}" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
+                        <a href="{% url 'demande_org' %}" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
                             <span>Commencer</span>
                             <i class="bi bi-arrow-right"></i>
                         </a>
