--- a/templates/inclusions/header.html
+++ b/templates/inclusions/header.html
@@ -19,7 +19,7 @@
               <li><a href="{% url 'login_gerant' %}">Vendeurs</a></li>
             </ul>
           </li>
-          <li><a class="getstarted scrollto" href="{% url 'index_org' %}">Commencer</a></li>
+          <li><a class="getstarted scrollto" href="{% url 'demande_org' %}">Commencer</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
