--- a/templates/organisations/index.html
+++ b/templates/organisations/index.html
@@ -44,8 +44,20 @@
                                 <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
                             {% endfor %}
                         </div>
+                        <div class="col-md-12 ">
+                            {{form.other}}
+                            {% for error in form.other.errors %}
+                                <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
+                            {% endfor %}
+                        </div>
                         <div class="col-md-12 text-center">
                             <button type="submit" class="w-100">Valider</button>
+                        </div>
+                        <br>
+                        <div class="col-md-12 text-center">
+                        {% for msg in messages %}
+                            <p class="alert alert-success">{{msg}}</p>
+                        {% endfor %}
                         </div>
                     </div>
                 </form>
@@ -53,6 +65,11 @@
         </div>
     </div>
   </section>
+<style>
+    textarea{
+        resize: none;
+    }
+</style>
 
 
 <!-- End Contact Section -->
