--- a/templates/organisations/index.html
+++ b/templates/organisations/index.html
@@ -13,6 +13,8 @@
             <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
                 <!--<img src="{% static 'assets/img/2.png' %}" class="img-fluid" alt="Organisations">-->
             </div>
+            <br>
+            <br>
             <div class="col-lg-6">
                 <form action="" method="post" class="php-email-form" style="padding-top: 12%;">
                     <header class="section-header">
@@ -49,6 +51,12 @@
                             {% for error in form.other.errors %}
                                 <span class="text-danger" style="font-size: 13px; font-weight: lighter; margin-top: 7px; margin-left: 13px;">{{error}}</span>
                             {% endfor %}
+                        </div>
+                        <div class="col-md-12 ">
+                            <div class="form-group">
+                                <label class="form-label d-block">Choisissez un document légal</label>
+                                <input type="file" name="file" id="file">
+                            </div>
                         </div>
                         <div class="col-md-12 text-center">
                             <button type="submit" class="w-100">Valider</button>
