Enregistrement du fichier

--- a/templates/organisations/index.html
+++ b/templates/organisations/index.html
@@ -16,7 +16,7 @@
             <br>
             <br>
             <div class="col-lg-6">
-                <form action="" method="post" class="php-email-form" style="padding-top: 12%;">
+                <form action="" method="post" class="php-email-form" style="padding-top: 12%;" enctype="multipart/form-data">
                     <header class="section-header">
                         <p id="labelform">Faites votre demande d'inscription</p>
                     </header>
