Before many to many

--- a/templates/administrateurs/new.html
+++ b/templates/administrateurs/new.html
@@ -10,7 +10,7 @@
             <div class="col-lg-6">
                 <form action="" method="post" class="php-email-form" style="margin-top: 12%;">
                     <header class="section-header">
-                        <p id="labelform">Ajoutez un gestionnaire des points d'affaires à {{nom_org}}</p>
+                        <p id="labelform">Ajoutez un gestionnaire des points de vente à {{nom_org}}</p>
                     </header>
                     {% csrf_token %}
                     <div class="row gy-4">
