--- a/templates/panel/details.html
+++ b/templates/panel/details.html
@@ -77,6 +77,10 @@
                                         <th>Autre:</th>
                                         <td>{{demande.other}}</td>
                                     </tr>
+                                    <tr>
+                                        <td colspan="2"><a href="{{demande.file.url }}" download class="text-primary"><u>Télecharger le fichier uploadé</u></a> </td>
+                                    </tr>
+                        
                                 </table>
                                 <br>
                                 <a href="#valider" class="btn btn-primary w-100" id="btn-valider">Valider</a>
