Fix categorie section

--- a/templates/categories/index.html
+++ b/templates/categories/index.html
@@ -21,7 +21,7 @@
                 <div class="btn-group me-2">
                     {% if lst_cat %}
                       <a href="{% url 'export_pdf_cat' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                      <a href="{% url 'export_xls_cat' %}" class="btn btn-sm btn-outline-success">XLS</a>
+<!--                      <a href="{% url 'export_xls_cat' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                     {% endif %}
                 </div>
               </div>
