--- a/templates/point_affaires/index.html
+++ b/templates/point_affaires/index.html
@@ -20,7 +20,7 @@
                     <div class="btn-group me-2">
                         {% if lst_point %}
                         <a href="{% url 'export_pdf_point' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                        <a href="{% url 'export_xls_point' %}" class="btn btn-sm btn-outline-success">XLS</a>
+<!--                        <a href="{% url 'export_xls_point' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                         {% endif %}
                     </div>
                   </div>
