--- a/templates/produits/index.html
+++ b/templates/produits/index.html
@@ -20,7 +20,7 @@
                 <div class="btn-group me-2">
                     {% if lst_prod %}
                     <a href="{% url 'export_pdf_prod' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                    <a href="{% url 'export_xls_prod' %}" class="btn btn-sm btn-outline-success">XLS</a>
+<!--                    <a href="{% url 'export_xls_prod' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                     {% endif %}
                 </div>
               </div>
