Setup product history

--- a/templates/dashboard_user/layouts/details.html
+++ b/templates/dashboard_user/layouts/details.html
@@ -220,7 +220,7 @@
                         </table>
                         {% else %}
                           <br>
-                          <p class="alert alert-info text-center">Aucun gérant disponible pour le moment.</p>
+                          <p class="alert alert-info text-center">Aucun vendeur disponible pour le moment.</p>
                         {% endif %}
                       </div>
                     </div>
