--- a/templates/produits/index.html
+++ b/templates/produits/index.html
@@ -168,7 +168,7 @@
                         <div class="btn-toolbar mb-2 mb-md-0">
                           <div class="btn-group me-2">
                             <a href="{% url 'histo_pdf_prod' %}" class="btn btn-sm btn-outline-danger">PDF</a>
-                            <a href="{% url 'histo_xls_prod' %}" class="btn btn-sm btn-outline-success">XLS</a>
+<!--                            <a href="{% url 'histo_xls_prod' %}" class="btn btn-sm btn-outline-success">XLS</a>-->
                           </div>
                         </div>
                       </div>
