--- a/templates/produits/pdf-output-histo.html
+++ b/templates/produits/pdf-output-histo.html
@@ -6,11 +6,11 @@
 {% block body %}
 <div class="header">
     <p class="nom-org">{{org.nom}}<p>
-    <p class="mail-org">E-mail: {{org.mail}}</p>
+    <p class="mail-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">E-mail:</span> {{org.mail}}</p>
     {% if org.telephone_s %}
-        <p class="tel-org">Tel: {{org.telephone_p}} / {{org.telephone_s}}</p>
+        <p class="tel-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">Tél:</span> {{org.telephone_p}} / {{org.telephone_s}}</p>
     {% else %}
-        <p class="tel-org">Tel: {{org.telephone_p}}</p>
+        <p class="tel-org"><span style="font-weight: lighter !important; color: #333; font-size: 12px;!important;">Tél:</span> {{org.telephone_p}}</p>
     {% endif %}
     <hr>
 </div>
@@ -20,7 +20,7 @@
             <h3 class="title">Historique du stock</h3>
             <thead>
                 <tr>
-                    <th scope="col" class="num">#</th>
+                    <th scope="col">#</th>
                     <th scope="col" align="left">Désignation</th>
                     <th scope="col">Qté ajoutée</th>
                     <th scope="col">Qté en stock</th>
@@ -32,11 +32,11 @@
                 {% for histo in lst_histo %}
                     {% load app_filter %}
                     <tr>
-                        <th scope="row">{{forloop.counter}}</th>
+                        <td>{{forloop.counter}}</td>
                         <td>{{histo.produit.designation}}</td>
                         <td>{{histo.qte}}</td>
                         <td>{{histo.point.nom|filter_prod:histo.produit.id}}</td>
-                        <td>{{histo.date_ajout}}</td>
+                        <td>{{histo.date_ajout|date:"d/m/Y"}}</td>
                         <td>{{histo.point}}</td>
                     </tr>
                 {% endfor %}
